part-2/ex_2.02_pr_v1.0/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      volumes:
        - name: todo-frontend-volume
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-frontend
          image: tryfonm/todo-frontend:v2.02
          volumeMounts:
            - name: todo-frontend-volume
              mountPath: /usr/src/todo-app/files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      volumes:
        - name: todo-backend-volume
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-backend
          image: tryfonm/todo-backend:v2.02
          volumeMounts:
            - name: todo-backend-volume
              mountPath: /usr/src/todo-app/files
